update README and change the language level to 11